// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`world-v2 initWorld new world 1`] = `
{
  "derived": {
    "beltPaths": [],
    "nextEntityId": 0,
    "tiles": {},
  },
  "origin": {
    "entities": {},
  },
}
`;

exports[`world-v2 tryAddEntities add belt 1`] = `
{
  "derived": {
    "beltPaths": [
      {
        "entities": [
          {
            "direction": "WestEast",
            "id": "0",
            "invert": false,
          },
        ],
        "loop": false,
      },
    ],
    "nextEntityId": 0,
    "tiles": {
      "0.0": {
        "entityIds": [
          "0",
        ],
      },
    },
  },
  "origin": {
    "entities": {
      "0": {
        "id": "0",
        "items": [],
        "offset": 0,
        "position": [
          0,
          0,
        ],
        "size": [
          1,
          1,
        ],
        "type": "Belt",
        "velocity": 0,
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add two connected belts 1`] = `
{
  "derived": {
    "beltPaths": [
      {
        "entities": [
          {
            "direction": "WestEast",
            "id": "1",
            "invert": false,
          },
          {
            "direction": "WestEast",
            "id": "0",
            "invert": false,
          },
        ],
        "loop": false,
      },
    ],
    "nextEntityId": 0,
    "tiles": {
      "0.0": {
        "entityIds": [
          "0",
        ],
      },
      "1.0": {
        "entityIds": [
          "1",
        ],
      },
    },
  },
  "origin": {
    "entities": {
      "0": {
        "id": "0",
        "items": [],
        "offset": 0,
        "position": [
          0,
          0,
        ],
        "size": [
          1,
          1,
        ],
        "type": "Belt",
        "velocity": 0,
      },
      "1": {
        "id": "1",
        "items": [],
        "offset": 0,
        "position": [
          1,
          0,
        ],
        "size": [
          1,
          1,
        ],
        "type": "Belt",
        "velocity": 0,
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add two disconnected belts 1`] = `
{
  "derived": {
    "beltPaths": [
      {
        "entities": [
          {
            "direction": "WestEast",
            "id": "0",
            "invert": false,
          },
        ],
        "loop": false,
      },
      {
        "entities": [
          {
            "direction": "WestEast",
            "id": "1",
            "invert": false,
          },
        ],
        "loop": false,
      },
    ],
    "nextEntityId": 0,
    "tiles": {
      "0.0": {
        "entityIds": [
          "0",
        ],
      },
      "2.0": {
        "entityIds": [
          "1",
        ],
      },
    },
  },
  "origin": {
    "entities": {
      "0": {
        "id": "0",
        "items": [],
        "offset": 0,
        "position": [
          0,
          0,
        ],
        "size": [
          1,
          1,
        ],
        "type": "Belt",
        "velocity": 0,
      },
      "1": {
        "id": "1",
        "items": [],
        "offset": 0,
        "position": [
          2,
          0,
        ],
        "size": [
          1,
          1,
        ],
        "type": "Belt",
        "velocity": 0,
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities empty 1`] = `
{
  "derived": {
    "beltPaths": [],
    "nextEntityId": 0,
    "tiles": {},
  },
  "origin": {
    "entities": {},
  },
}
`;

exports[`world-v2 tryAddEntities replace belt 1`] = `
{
  "derived": {
    "beltPaths": [
      {
        "entities": [
          {
            "direction": "WestEast",
            "id": "0",
            "invert": false,
          },
        ],
        "loop": false,
      },
    ],
    "nextEntityId": 0,
    "tiles": {
      "0.0": {
        "entityIds": [
          "0",
        ],
      },
    },
  },
  "origin": {
    "entities": {
      "0": {
        "id": "0",
        "items": [],
        "offset": 0,
        "position": [
          0,
          0,
        ],
        "size": [
          1,
          1,
        ],
        "type": "Belt",
        "velocity": 0,
      },
    },
  },
}
`;
